css/styles.css
@font-face {
  font-family: 'Inter';
  src: url('../assets/fonts/Inter-VariableFont_slnt,wght.ttf');
  font-weigth: 400 800;
  font-display: swap;
}

:root {
  --soft-orange: hsl(35, 77%, 62%);
  --soft-red: hsl(5, 85%, 63%);

  --off-white: hsl(36, 100%, 99%);
  --grayish-blue: hsl(233, 8%, 79%);
  --dark-grayish-blue: hsl(236, 13%, 42%);
  --very-dark-blue: hsl(240, 100%, 5%);

  --ff-base: 'Inter', sans-serif;

  --fw-regular: 400;
  --fw-semi-bold: 700;
  --fw-bold: 800;

  --fs-300: .9rem;
  --fs-400: .95rem;
  --fs-700: 1.2rem;
  --fs-750: 2rem;
  --fs-800: 2.5rem;
  --fs-900: 3.5rem;
}

/* 1. Use a more-intuitive box-sizing model */
*, *::before, *::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
* {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Add accessible line-height */
  line-height: 1.7;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input, button, textarea, select {
  font: inherit;
}

/* 8. Avoid text overflows */
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

h1, h2, h3, h4 {
  line-height: 1.01;
}

:where(h1, h2, h3, h4) > a {
  color: currentColor;
  text-decoration: none;

  &:hover,
  &:focus-visible {
    color: var(--soft-orange);
  }
}

main {
  container-type: inline-size;
}

.three-columns {
  display: grid;
  gap: 1rem;

  @container (width > calc(3 * 25ch)) {
    grid-template-columns: repeat(3, 1fr);

    > .span-2 {
      grid-column: span 2;
    }
  }
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.flow > * + * {
  margin-block-start: 2em;
}

.section {
  margin-block-end: 3rem;
}

.separated-list {
  margin-block-start: 2.5em;

  p {
    margin-block-start: .6em;
  }

  & > * + * {
    &::before {
      content: '';
      display: block;
      width: 100%;
      height: 1px;
      background: hsl(from var(--grayish-blue) h s l / .3);
      margin-block: 1.9rem;
    }
  }
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-block: 5.5rem 3.5rem;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

nav > ul {
  display: flex;
  gap: 2.5rem;

  a {
    text-decoration: none;
    color: var(--dark-grayish-blue);

    &:hover,
    &:focus-visible {
      color: var(--soft-red);
    }
  }
}

body {
  font-family: var(--ff-base);
  font-size: var(--fs-400);
  font-weight: var(--fw-regular);
  color: var(--dark-grayish-blue);
  background-color: var(--off-white);
}

.base-layout {
  --max-width: 1110px;
  --col-width: 1rem;
  display: grid;
  grid-template-columns:
    minmax(var(--col-width), 1fr)
    min(var(--max-width), 100% - var(--col-width) * 2)
    minmax(var(--col-width), 1fr);

  & > * {
    grid-column: 2 / 3;
  }

  & > .full-width {
    grid-column: 1 / -1;
    grid-column: 2 / 3;
}

.featured-article-container {
  container-type: inline-size;
}

.featured {
  display: grid;
  gap: 1rem;

  @container (width > calc(25ch * 2)) {
    grid-template-columns: repeat(2, 1fr);
    gap: 2rem 1rem;
  }

  .featured__img {
    grid-column: 1 / -1;
  }

  .featured__title {
    font-size: var(--fs-900);
    font-weight: var(--fw-bold);
    color: var(--very-dark-blue);
  }
}

.button {
  display: inline-block;
  cursor: pointer;
  background-color: var(--soft-red);
  color: var(--very-dark-blue);
  padding: .8em 2.1em;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: var(--fw-semi-bold);
  font-size: var(--fs-300);
  letter-spacing: .3em;

  &:hover,
  &:focus-visible {
    background-color: var(--very-dark-blue);
    color: var(--off-white);
  }
}

.new-articles {
  background-color: var(--very-dark-blue);
  padding: 1.9rem 1.5rem;

  h2 {
    font-size: var(--fs-800);
    color: var(--soft-orange);
  }

  h3 {
    font-size: var(--fs-700);
    font-weight: var(--fw-bold);
    color: var(--off-white);
  }

  p {
    color: var(--grayish-blue);
  }
}

.top-articles {
  counter-reset: article-count;

  li {
    counter-increment: article-count;
  }

  article {
    display: grid;
    gap: 1.5rem;
    grid-template-columns: 100px auto;

    > div {
      display: grid;
      gap: .5rem;
    }

    > div::before {
      line-height: 1;
      content: counter(article-count, decimal-leading-zero);
      display: block;
      color: var(--soft-red);
      font-size: var(--fs-750);
      font-weight: var(--fw-semi-bold);
    }

    h3 {
      margin-block-start: .4em;
    }
  }

  a:hover,
  a:focus-visible {
    color: var(--soft-red);
  }
}

.top-articles-container {
  display: flex;
  justify-content: space-between;
}

button {
  display: none;
}

@media (width < 750px) {
  button {
    display: block;
    position: absolute;
    z-index: 999;
    right: 1rem;
    padding: 1rem;
    background: transparent;
    border: 0;
  }

  .icon-hamburger {
    display: block;
  }

  .icon-close {
    display: none;
  }

  nav {
    display: none;
  }

  [aria-expanded='true'] {
    .icon-hamburger {
      display: none;
    }

    .icon-close {
      display: block;
    }
  }

  [aria-expanded='true'] + nav  {
    display: block;
    position: absolute;
    inset: 0;
    width: 80%;
    margin-left: auto;
    z-index: 1;
    background-color: white;
    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .3);

    ul {
      margin-top: 20vh;
      margin-left: 3rem;
      display: grid;
      gap: 3rem;
      font-size: 1.5rem;
    }
  }
}

